cmss/main/default/objects/AccessShare__c/AccessShare__c.object-meta.xml
<CustomObject>
    <label>Access Share</label>
    <nameField>
        <displayFormat>AS-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Search Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Share</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>