cmss/main/default/objects/AccessShare__c/fields/AccessTo__c.field-meta.xml
<CustomField>
    <fullName>AccessTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Share</relationshipLabel>
    <relationshipName>Search_Accesses</relationshipName>
    <type>Lookup</type>
</CustomField>