cmss/main/default/objects/AccessShare__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>