cmss/main/default/objects/AccessShare__c/fields/RoleId__c.field-meta.xml
<CustomField>
    <fullName>RoleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>