cmss/main/default/objects/AccessShare__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Tandem</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>KA Delegation</fullName>
            </value>
            <value>
                <fullName>SEZ Delegation</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>